# mx-sovereign-sc

./: .envrc  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  sovWallet.pem
chain-config/: Cargo.toml  README.md  sc-config.toml
chain-config/meta/: Cargo.toml
chain-config/src/: bls_keys.rs  bridge.rs  chain_config_proxy.rs  chain_factory_proxy.rs  config_utils.rs  configs.rs  events.rs  lib.rs  liquid_staking_proxy.rs  storage.rs  validator.rs  validator_rules.rs
chain-config/tests/: chain_config_blackbox_setup.rs  chain_config_blackbox_tests.rs  chain_config_unit_tests.rs
chain-config/wasm/: Cargo.toml
chain-config/wasm-chain-config/: Cargo.toml
chain-config/wasm-chain-config-full/: Cargo.toml
chain-config/wasm-chain-config-view/: Cargo.toml
chain-factory/: Cargo.toml  README.md  sc-config.toml
chain-factory/meta/: Cargo.toml
chain-factory/src/: chain_factory_proxy.rs  complete_phases.rs  factory.rs  lib.rs  slash.rs  update_configs.rs
chain-factory/tests/: chain_factory_blackbox_setup.rs  chain_factory_blackbox_tests.rs  chain_factory_tests.rs
chain-factory/wasm/: Cargo.toml
chain-factory/wasm-chain-factory/: Cargo.toml
chain-factory/wasm-chain-factory-full/: Cargo.toml
chain-factory/wasm-chain-factory-view/: Cargo.toml
common/bls-signature/: Cargo.toml
common/common-blackbox-setup/: Cargo.toml
common/common-interactor/: Cargo.toml  test_biguint
common/common-test-setup/: Cargo.toml
common/common-tests-setup/: Cargo.toml
delegation-mock/: Cargo.toml  sc-config.toml
delegation-mock/meta/: Cargo.toml
delegation-mock/scenarios/: delegation_mock.scen.json
delegation-mock/src/: delegation_mock.rs  lib.rs
delegation-mock/tests/: delegation_mock_scenario_go_test.rs  delegation_mock_scenario_rs_test.rs
delegation-mock/wasm/: Cargo.toml
delegation-mock/wasm-delegation-mock-full/: Cargo.toml
delegation-mock/wasm-delegation-mock-view/: Cargo.toml
enshrine-esdt-safe/: Cargo.toml  sc-config.toml
enshrine-esdt-safe/interactor/: Cargo.toml  state.toml
enshrine-esdt-safe/meta/: Cargo.toml
enshrine-esdt-safe/scenarios/: enshrine_esdt_safe.scen.json
enshrine-esdt-safe/src/: custom_builtin_func_proxy.rs  enshrine_esdt_safe.rs  enshrine_esdt_safe_proxy.rs  lib.rs  token_handler_proxy.rs
enshrine-esdt-safe/tests/: enshrine_esdt_safe_blackbox_setup.rs  enshrine_esdt_safe_blackbox_test.rs  enshrine_esdt_safe_blackbox_tests.rs  enshrine_esdt_safe_scenario_go_test.rs  enshrine_esdt_safe_scenario_rs_test.rs
enshrine-esdt-safe/wasm/: Cargo.toml
enshrine-esdt-safe/wasm-enshrine-esdt-safe/: Cargo.toml
enshrine-esdt-safe/wasm-enshrine-esdt-safe-full/: Cargo.toml
enshrine-esdt-safe/wasm-enshrine-esdt-safe-view/: Cargo.toml
esdt-safe/: Cargo.toml  sc-config.toml
esdt-safe/interactor/: .gitignore  Cargo.toml  interactor_trace.scen.json  state.toml
esdt-safe/meta/: Cargo.toml
esdt-safe/src/: bls_signature.rs  create_tx.rs  esdt_safe_proxy.rs  lib.rs  refund.rs  set_tx_status.rs
esdt-safe/tests/: blackbox_setup.rs  bridge_blackbox_tests.rs  bridge_test.rs  esdt_safe_blackbox_setup.rs  esdt_safe_blackbox_test.rs  esdt_safe_blackbox_tests.rs  esdt_safe_sc_scenario_go_test.rs  esdt_safe_sc_scenario_rs_test.rs
esdt-safe/wasm/: Cargo.toml
esdt-safe/wasm-esdt-safe/: Cargo.toml
esdt-safe/wasm-esdt-safe-full/: Cargo.toml
esdt-safe/wasm-esdt-safe-view/: Cargo.toml
execute/: Cargo.toml
execute/meta/: Cargo.toml
execute/scenarios/: execute.scen.json
execute/src/: lib.rs
execute/tests/: execute_scenario_go_test.rs  execute_scenario_rs_test.rs
execute/wasm/: Cargo.toml
fee-market/: Cargo.toml  sc-config.toml
fee-market/interactor/: Cargo.toml
fee-market/meta/: Cargo.toml
fee-market/src/: enable_fee.rs  fee_common.rs  fee_distribution.rs  fee_market_proxy.rs  fee_operations.rs  fee_type.rs  fee_whitelist.rs  lib.rs  pairs.rs  price_aggregator.rs  safe_price_query.rs  storage.rs  subtract_fee.rs
fee-market/tests/: fee_market_blackbox_setup.rs  fee_market_blackbox_test.rs
fee-market/wasm/: Cargo.toml
fee-market/wasm-fee-marker-full/: Cargo.toml
fee-market/wasm-fee-market/: Cargo.toml
fee-market/wasm-fee-market-full/: Cargo.toml
fee-market/wasm-fee-market-view/: Cargo.toml
fee-market/wasm-multisig-view/: Cargo.toml
from-sovereign/: Cargo.toml  sc-config.toml
from-sovereign/meta/: Cargo.toml
from-sovereign/scenarios/: from_sovereign.scen.json
from-sovereign/src/: deposit.rs  lib.rs  token_mapping.rs
from-sovereign/tests/: from_sovereign_scenario_go_test.rs  from_sovereign_scenario_rs_test.rs  from_sovereign_unit_tests.rs
from-sovereign/wasm/: Cargo.toml
from-sovereign/wasm-from-sovereign-full/: Cargo.toml
from-sovereign/wasm-from-sovereign-view/: Cargo.toml
header-verifier/: Cargo.toml  README.md  sc-config.toml
header-verifier/meta/: Cargo.toml
header-verifier/src/: checks.rs  header_utils.rs  header_verifier_proxy.rs  lib.rs  operations.rs  storage.rs  utils.rs
header-verifier/tests/: header_verifier_blackbox_setup.rs  header_verifier_blackbox_test.rs  header_verifier_blackbox_tests.rs  header_verifier_setup.rs  multisig_blackbox_test.rs
header-verifier/wasm/: Cargo.toml
header-verifier/wasm-header-verifier/: Cargo.toml
header-verifier/wasm-header-verifier-full/: Cargo.toml
header-verifier/wasm-header-verifier-view/: Cargo.toml
header-verifier/wasm-multisig-view/: Cargo.toml
interactor/: .gitignore  Cargo.toml  HowToRun.md  README.md  config.toml  set_state.json  state.toml
multisig/: Cargo.toml
multisigverifier/: Cargo.toml
mvx-esdt-safe/: Cargo.toml  README.md  sc-config.toml  set_state.json
mvx-fee-market/: Cargo.toml  README.md  sc-config.toml
sov-enshrine-esdt-safe/: Cargo.toml  sc-config.toml
sov-esdt-safe/: Cargo.toml  README.md  sc-config.toml
sov-fee-market/: Cargo.toml  README.md  sc-config.toml
sov-registrar/: Cargo.toml  sc-config.toml
sovereign-forge/: Cargo.toml  README.md  sc-config.toml
testing-sc/: Cargo.toml  sc-config.toml
to-sovereign/: Cargo.toml  sc-config.toml
token-handler/: Cargo.toml  sc-config.toml
(+645 files in other folders)
