[workspace]
resolver = "2"

members = [
  "chain-config",
  "chain-config/meta",
  "chain-factory",
  "chain-factory/meta",
  "esdt-safe",
  "esdt-safe/interactor",
  "esdt-safe/meta",
  "fee-market",
  "fee-market/meta",
  "header-verifier",
  "header-verifier/meta", 
  "enshrine-esdt-safe",
  "enshrine-esdt-safe/interactor",
  "enshrine-esdt-safe/meta",
  "token-handler",
  "token-handler/meta",
  "testing-sc",
  "testing-sc/meta",
  "sovereign-forge",
  "sovereign-forge/interactor",
  "sovereign-forge/meta",
  "mvx-esdt-safe",
  "mvx-esdt-safe/meta"
]
