[workspace]
resolver = "2"

members = [
  "chain-config",
  "chain-config/meta",
  "chain-factory",
  "chain-factory/meta",
  "fee-market",
  "fee-market/meta",
  "header-verifier",
  "header-verifier/meta",
  "token-handler",
  "token-handler/meta",
  "testing-sc",
  "testing-sc/meta",
  "sovereign-forge",
  "sovereign-forge/meta",
  "header-verifier/meta",
  "sov-esdt-safe",
  "sov-esdt-safe/meta",
  "mvx-esdt-safe",
  "mvx-esdt-safe/meta",
  "testing-sc",
  "testing-sc/meta",
  "interactor",
  "common/token-whitelist",
]
