[workspace]
resolver = "2"

members = [
  "chain-config",
  "chain-config/meta",
  "chain-factory",
  "chain-factory/meta",
  "mvx-fee-market",
  "mvx-fee-market/meta",
  "sov-fee-market",
  "sov-fee-market/meta",
  "header-verifier",
  "header-verifier/meta",
  "sovereign-forge",
  "sovereign-forge/meta",
  "sov-esdt-safe",
  "sov-esdt-safe/meta",
  "mvx-esdt-safe",
  "mvx-esdt-safe/meta",
  "testing-sc",
  "testing-sc/meta",
  "interactor",
]
