[package]
name = "chain-config"
version = "0.1.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.multiversx-sc-scenario]
version = "0.61.0"
git = "https://github.com/multiversx/mx-sdk-rs"
branch = "rc/v0.62"
features = ["bls"]

[dev-dependencies.common-test-setup]
path = "../common/common-test-setup"

[dependencies.multiversx-sc]
version = "0.61.0"
git = "https://github.com/multiversx/mx-sdk-rs"
branch = "rc/v0.62"

[dependencies.multiversx-sc-modules]
version = "0.61.0"
git = "https://github.com/multiversx/mx-sdk-rs"
branch = "rc/v0.62"

[dependencies.structs]
path = "../common/structs"

[dependencies.proxies]
path = "../common/proxies"

[dependencies.setup-phase]
path = "../common/setup-phase"

[dependencies.error-messages]
path = "../common/error-messages"

[dependencies.cross-chain]
path = "../common/cross-chain"

[dependencies.custom-events]
path = "../common/custom-events"

[dependencies.common-utils]
path = "../common/common-utils"
