[package]
name = "chain-factory"
version = "0.1.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.multiversx-sc-scenario]
version = "0.62.0"
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "d23fc3b6834925e68c25eb7622efb2e2c3344d15"

[dev-dependencies.common-test-setup]
path = "../common/common-test-setup"

[dependencies.multiversx-sc]
version = "0.62.0"
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "d23fc3b6834925e68c25eb7622efb2e2c3344d15"

[dependencies.multiversx-sc-modules]
version = "0.62.0"
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "d23fc3b6834925e68c25eb7622efb2e2c3344d15"

[dependencies.common-utils]
path = "../common/common-utils"

[dependencies.chain-config]
path = "../chain-config"

[dependencies.proxies]
path = "../common/proxies"

[dependencies.structs]
path = "../common/structs/"

[dependencies.error-messages]
path = "../common/error-messages"

[dependencies.custom-events]
path = "../common/custom-events"
