[package]
name = "enshrine-esdt-safe"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.structs]
path = "../common/structs"

[dependencies.setup-phase]
path = "../common/setup-phase"

[dependencies.token-whitelist]
path = "../common/token-whitelist"

[dependencies.error-messages]
path = "../common/error-messages"

[dependencies.utils]
path = "../common/utils"

[dependencies.proxies]
path = "../common/proxies"

[dependencies.cross-chain]
path = "../common/cross-chain"

[dependencies.fee-market]
path = "../fee-market"

[dependencies.header-verifier]
path = "../header-verifier"

[dependencies.token-handler]
path = "../token-handler"

[dependencies.chain-config]
path = "../chain-config"

[dependencies.multiversx-sc]
version = "=0.57.1"

[dependencies.multiversx-sc-modules]
version = "=0.57.1"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.57.1"
