[package]
name = "enshrine-esdt-safe"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.structs]
path = "../common/structs"

[dependencies.setup-phase]
path = "../common/setup-phase"

[dependencies.token-whitelist]
path = "../common/token-whitelist"

[dependencies.error-messages]
path = "../common/error-messages"

[dependencies.utils]
path = "../common/utils"

[dependencies.proxies]
path = "../common/proxies"

[dependencies.cross-chain]
path = "../common/cross-chain"

[dependencies.fee-market]
path = "../fee-market"

[dependencies.header-verifier]
path = "../header-verifier"

[dependencies.token-handler]
path = "../token-handler"

[dependencies.chain-config]
path = "../chain-config"

[dependencies.multiversx-sc]
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "b59411841984a2fcbf76498d29bc131f2d433af9"

[dependencies.multiversx-sc-modules]
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "b59411841984a2fcbf76498d29bc131f2d433af9"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"

[dev-dependencies.multiversx-sc-scenario]
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "b59411841984a2fcbf76498d29bc131f2d433af9"

[dev-dependencies.common-test-setup]
path = "../common/common-test-setup"
