[package]
name = "esdt-safe"
version = "0.0.0"
authors = ["you"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.transaction]
path = "../common/transaction"

[dependencies.tx-batch-module]
path = "../common/tx-batch-module"

[dependencies.max-bridged-amount-module]
path = "../common/max-bridged-amount-module"

[dependencies.bls-signature]
path = "../common/bls-signature"

[dependencies.multiversx-sc]
version = "=0.43.5"
features = [ "promises", "esdt-token-payment-legacy-decode" ]

[dependencies.multiversx-sc-modules]
version = "=0.43.5"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.43.5"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"
