[package]
name = "esdt-safe"
version = "0.0.0"
authors = ["you"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.transaction]
path = "../common/transaction"

[dependencies.tx-batch-module]
path = "../common/tx-batch-module"

[dependencies.max-bridged-amount-module]
path = "../common/max-bridged-amount-module"

[dependencies.bls-signature]
path = "../common/bls-signature"

[dependencies.setup-phase]
path = "../common/setup-phase"

[dependencies.token-whitelist]
path = "../common/token-whitelist"

[dependencies.utils]
path = "../common/utils"

[dependencies.proxies]
path = "../common/proxies"

[dependencies.fee-market]
path = "../fee-market"

[dependencies.header-verifier]
path = "../header-verifier"

[dependencies.multiversx-sc]
version = "=0.54.3"

[dependencies.multiversx-sc-modules]
version = "=0.54.3"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.54.3"
