[package]
name = "fee-market"
version = "0.1.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "=0.59.0"

[dependencies.utils]
path = "../common/utils"

[dependencies.setup-phase]
path = "../common/setup-phase"

[dependencies.proxies]
path = "../common/proxies"

[dependencies.structs]
path = "../common/structs"

[dependencies.error-messages]
path = "../common/error-messages"

[dependencies.events]
path = "../common/events"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.59.0"

[dev-dependencies.common-test-setup]
path = "../common/common-test-setup"
