[package]
name = "from-sovereign"
version = "0.0.0"
publish = false
edition = "2021"
authors = ["you"]

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "0.56.0"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.56.0"

[dependencies.utils]
path = "../common/utils"

[dependencies.operation]
path = "../common/operation"

[dependencies.cross-chain]
path = "../common/cross-chain"
