[package]
name = "header-verifier"
version = "0.1.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "0.57.1"

[dependencies.structs]
path = "../common/structs"

[dependencies.proxies]
path = "../common/proxies"

[dependencies.setup-phase]
path = "../common/setup-phase"

[dependencies.error-messages]
path = "../common/error-messages"

[dependencies.cross-chain]
path = "../common/cross-chain"

[dev-dependencies.common-test-setup]
path = "../common/common-test-setup"

[dev-dependencies.multiversx-sc-scenario]
version = "0.57.1"
