[package]
name = "rust-interact"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[[bin]]
name = "rust-interact"
path = "src/interactor_main.rs"

[lib]
path = "src/interact.rs"

[dependencies.mvx-esdt-safe]
path = "../mvx-esdt-safe"

[dependencies.sov-esdt-safe]
path = "../sov-esdt-safe"

[dependencies.proxies]
path = "../common/proxies"

[dependencies.structs]
path = "../common/structs"

[dependencies.multiversx-sc-snippets]
version = "0.56.1"

[dependencies.multiversx-sc]
version = "0.56.1"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.6"

[features]
chain-simulator-tests = []

