[[bin]]
name = "rust-interact"
path = "src/interactor_main.rs"

[package]
name = "rust-interact"
version = "0.1.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/interact.rs"

[dependencies]
toml = "0.8.6"

[dependencies.mvx-esdt-safe]
path = "../mvx-esdt-safe"

[dependencies.sov-esdt-safe]
path = "../sov-esdt-safe"

[dependencies.proxies]
path = "../common/proxies"

[dependencies.structs]
path = "../common/structs"

[dependencies.multiversx-sc-snippets]
version = "0.57.0"

[dependencies.multiversx-sc]
version = "0.57.0"

[dependencies.clap]
version = "4.4.7"
features = ["derive"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[features]
chain-simulator-tests = []
