[package]
name = "rust-interact"
version = "0.1.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/interact.rs"

[dependencies]
toml = "0.8"

[dependencies.mvx-esdt-safe]
path = "../mvx-esdt-safe"

[dependencies.sov-esdt-safe]
path = "../sov-esdt-safe"

[dependencies.header-verifier]
path = "../header-verifier"

[dependencies.proxies]
path = "../common/proxies"

[dependencies.structs]
path = "../common/structs"

[dependencies.multiversx-sc-snippets]
version = "0.62.0"

[dependencies.multiversx-sc]
version = "0.62.0"

[dependencies.clap]
version = "4.4.7"
features = ["derive"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serial_test]
version = "3.2.0"

[dependencies.error-messages]
path = "../common/error-messages"

[dependencies.common-test-setup]
path = "../common/common-test-setup"

[dependencies.common-interactor]
path = "../common/common-interactor"

[dependencies.cross-chain]
path = "../common/cross-chain"

[dev-dependencies]
rstest = "0.25.0"

[dev-dependencies.multiversx-sc-scenario]
version = "0.62.0"
features = ["bls"]

[features]
chain-simulator-tests = []
