[package]
name = "multisig"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@multiversx.com>, Dorin Iancu <dorin.iancu@multiversx.com>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.transaction]
path = "../common/transaction"

[dependencies.token-module]
path = "../common/token-module"

[dependencies.tx-batch-module]
path = "../common/tx-batch-module"

[dependencies.max-bridged-amount-module]
path = "../common/max-bridged-amount-module"

[dependencies.esdt-safe]
path = "../esdt-safe"

[dependencies.multi-transfer-esdt]
path = "../multi-transfer-esdt"

[dependencies.multiversx-sc]
version = "0.43.4"

[dependencies.multiversx-sc-modules]
version = "0.43.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.43.4"
