[package]
name = "multisigverifier"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "0.46.1"

[dependencies.bls-signature]
path = '../common/bls-signature'

[dependencies.transaction]
path = '../common/transaction'

[dependencies.setup-phase]
path = '../common/setup-phase'

[dependencies.esdt-safe]
path = '../esdt-safe'

[dependencies.chain-config]
path = '../chain-config'

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.multiversx-sc-scenario]
version = "0.46.1"

[workspace]
members = [
    ".",
    "meta",
]
