[package]
name = "multisigverifier"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "0.47.4"

[dependencies.bls-signature]
path = "../common/bls-signature"

[dependencies.transaction]
path = "../common/transaction"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.multiversx-sc-scenario]
version = "0.47.4"

# [workspace]
# members = [
#     ".",
#     "meta",
# ]
