[package]
name = "mvx-esdt-safe"
version = "0.1.0"
publish = false
edition = "2021"
authors = ["you"]

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "0.62.0"
git = "https://github.com/multiversx/mx-sdk-rs"
branch = "rc/v0.63"

[dependencies.multiversx-sc-modules]
version = "0.62.0"
git = "https://github.com/multiversx/mx-sdk-rs"
branch = "rc/v0.63"

[dependencies.testing-sc]
path = "../testing-sc"

[dependencies.common-utils]
path = "../common/common-utils"

[dependencies.mvx-fee-market]
path = "../mvx-fee-market"

[dependencies.structs]
path = "../common/structs"

[dependencies.cross-chain]
path = "../common/cross-chain"

[dependencies.custom-events]
path = "../common/custom-events"

[dependencies.setup-phase]
path = "../common/setup-phase"

[dependencies.proxies]
path = "../common/proxies"

[dependencies.header-verifier]
path = "../header-verifier"

[dependencies.chain-config]
path = "../chain-config"

[dependencies.error-messages]
path = "../common/error-messages"

[dev-dependencies.common-test-setup]
path = "../common/common-test-setup"

[dev-dependencies.multiversx-sc-scenario]
version = "0.62.0"
git = "https://github.com/multiversx/mx-sdk-rs"
branch = "rc/v0.63"
features = ["bls"]

[features]
chain-simulator-tests = []
