[package]
name = "mvx-fee-market"
version = "0.1.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "0.62.0"

[dependencies.common-utils]
path = "../common/common-utils"

[dependencies.setup-phase]
path = "../common/setup-phase"

[dependencies.proxies]
path = "../common/proxies"

[dependencies.structs]
path = "../common/structs"

[dependencies.error-messages]
path = "../common/error-messages"

[dependencies.custom-events]
path = "../common/custom-events"

[dependencies.fee-common]
path = "../common/fee-common"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.multiversx-sc-scenario]
version = "0.62.0"
features = ["bls"]

[dev-dependencies.common-test-setup]
path = "../common/common-test-setup"
