[package]
name = "sov-enshrine-esdt-safe"
version = "0.0.0"
edition = "2021"
publish = false
authors = ["you"]

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "0.56.1"

[dependencies.multiversx-sc-modules]
version = "=0.56.1"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.56.1"

[dependencies.operation]
path = "../common/operation"

[dependencies.tx-batch-module]
path = "../common/tx-batch-module"

[dependencies.cross-chain]
path = "../common/cross-chain"

[dependencies.max-bridged-amount-module]
path = "../common/max-bridged-amount-module"

[dependencies.setup-phase]
path = "../common/setup-phase"

[dependencies.token-whitelist]
path = "../common/token-whitelist"

[dependencies.utils]
path = "../common/utils"

[dependencies.proxies]
path = "../common/proxies"

[dependencies.fee-market]
path = "../fee-market"

[dependencies.header-verifier]
path = "../header-verifier"

[dependencies.token-handler]
path = "../token-handler"

[dependencies.chain-config]
path = "../chain-config"

[dependencies.testing-sc]
path = "../testing-sc"
