[package]
name = "sov-esdt-safe"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["you"]

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "b59411841984a2fcbf76498d29bc131f2d433af9"

[dependencies.multiversx-sc-modules]
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "b59411841984a2fcbf76498d29bc131f2d433af9"

[dependencies.testing-sc]
path = "../testing-sc"

[dependencies.common-utils]
path = "../common/common-utils"

[dependencies.fee-market]
path = "../fee-market"

[dependencies.structs]
path = "../common/structs"

[dependencies.cross-chain]
path = "../common/cross-chain"

[dependencies.custom-events]
path = "../common/custom-events"

[dependencies.setup-phase]
path = "../common/setup-phase"

[dependencies.proxies]
path = "../common/proxies"

[dependencies.error-messages]
path = "../common/error-messages"

[dev-dependencies.common-test-setup]
path = "../common/common-test-setup"

[dev-dependencies.multiversx-sc-scenario]
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "b59411841984a2fcbf76498d29bc131f2d433af9"