[package]
name = "sov-registrar"
version = "0.0.0"
edition = "2021"
publish = false
authors = ["andrei-baltariu <andrei.baltariu@multiversx.com>"]

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "b59411841984a2fcbf76498d29bc131f2d433af9"

[dependencies.structs]
path = "../common/structs"

[dependencies.tx-nonce]
path = "../common/tx-nonce"

[dependencies.custom-events]
path = "../common/custom-events"

[dependencies.fee-common]
path = "../common/fee-common"

[dependencies.common-utils]
path = "../common/common-utils"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "b59411841984a2fcbf76498d29bc131f2d433af9"
