[package]
name = "sovereign-forge"
version = "0.0.0"
publish = false
edition = "2021"
authors = ["you"]

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "=0.57.1"

[dependencies.multiversx-sc-modules]
version = "=0.57.1"

[dependencies.token-handler]
path = "../token-handler"

[dependencies.chain-factory]
path = "../chain-factory"

[dependencies.chain-config]
path = "../chain-config"

[dependencies.mvx-esdt-safe]
path = "../mvx-esdt-safe"

[dependencies.header-verifier]
path = "../header-verifier"

[dependencies.fee-market]
path = "../fee-market"

[dependencies.proxies]
path = "../common/proxies"

[dependencies.structs]
path = "../common/structs"

[dependencies.setup-phase]
path = "../common/setup-phase"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.57.1"
