[package]
name = "sovereign-forge"
version = "0.0.0"
publish = false
edition = "2021"
authors = ["you"]

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "b59411841984a2fcbf76498d29bc131f2d433af9"

[dependencies.chain-factory]
path = "../chain-factory"

[dependencies.chain-config]
path = "../chain-config"

[dependencies.mvx-esdt-safe]
path = "../mvx-esdt-safe"

[dependencies.cross-chain]
path = "../common/cross-chain"

[dependencies.header-verifier]
path = "../header-verifier"

[dependencies.fee-market]
path = "../fee-market"

[dependencies.proxies]
path = "../common/proxies"

[dependencies.structs]
path = "../common/structs"

[dependencies.error-messages]
path = "../common/error-messages"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-modules]
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "b59411841984a2fcbf76498d29bc131f2d433af9"

[dev-dependencies.common-test-setup]
path = "../common/common-test-setup"

[dev-dependencies.multiversx-sc-scenario]
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "b59411841984a2fcbf76498d29bc131f2d433af9"
