[package]
name = "testing-sc"
version = "0.1.0"
publish = false
edition = "2021"
authors = ["you"]

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "0.62.0"
git = "https://github.com/multiversx/mx-sdk-rs"
branch = "rc/v0.63"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.62.0"
git = "https://github.com/multiversx/mx-sdk-rs"
branch = "rc/v0.63"

[dependencies.proxies]
path = "../common/proxies"
