[package]
name = "testing-sc"
version = "0.1.0"
publish = false
edition = "2021"
authors = ["you"]

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "0.62.0"
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "d23fc3b6834925e68c25eb7622efb2e2c3344d15"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.62.0"
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "d23fc3b6834925e68c25eb7622efb2e2c3344d15"

[dependencies.proxies]
path = "../common/proxies"
