[package]
name = "token-handler"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.operation]
path = "../common/operation"

[dependencies.proxies]
path = "../common/proxies"

[dependencies.chain-factory]
path = "../chain-factory"

[dependencies.multiversx-sc]
version = "=0.55.0"

[dependencies.multiversx-sc-modules]
version = "=0.55.0"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.55.0"
